# ordinalgbt

./: .coveragerc  .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: deploymemt.yml  python-app.yml
docs/: comparison_with_classifiers.ipynb  conf.py  index.md  maths.md  maths.rst  motivation.ipynb  requirements.txt  shap.ipynb
notebooks/: ordinal_test.ipynb  ordinal_vs_multinomial.ipynb  shap.ipynb
ordinalgbt/: data.py  lgb.py  loss.py
scripts/: lgb_ordinal.py
src/ordinal_gbt/: lgb.py  loss.py
src/ordinalgbt/: data.py  lgb.py
tests/: conftest.py  test_lgb.py  test_loss.py
