[options]
package_dir=
    =src
packages=find:
install_requires=
    lightgbm
    numpy
    scipy

[options.packages.find]
where=src

[metadata]
name = ordinalgbt
version = attr:ordinalgbt.version
description = A library to build Gradient boosted trees for ordinal labels
long_description = file:README.md
author = Adamos Spanashis
author_email = spanashis@gmail.com
classifiers =
    Programming Language :: Python :: 3
platforms = any
python_requires= >=3.8

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install shado[PDF]` like:
# PDF = ReportLab; RXP
# Add here test requirements (semicolon/line-separated)
tests = pytest; pytest-cov
dev = scikit-learn
      lightgbm<4.0.0
      pytest
      pytest-cov
      shap
