[options]
# package_dir=ordinalgbt
packages=
    ordinalgbt
install_requires=
    lightgbm
    numpy
    scipy
    scikit-learn

# [options.packages.find]
# where=ordinalgbt

[metadata]
name = ordinalgbt
description = A library to build Gradient boosted trees for ordinal labels
version = 0.1.1
long_description = file:README.md
long_description_content_type = text/markdown
author = Adamos Spanashis
author_email = spanashis@gmail.com
classifiers =
    Programming Language :: Python :: 3
platforms = any
python_requires= >=3.8
url = https://github.com/adamingas/ordinalgbt

[options.extras_require]
tests = pytest; pytest-cov
dev = scikit-learn
      lightgbm<4.0.0
      pytest
      pytest-cov
      shap
      myst_nb
      sphinx>7.2
      sphinx-autoapi
      sphinx-rtd-theme

